@@ -731,6 +731,7 @@ static void add_popup_menu_accels(void)
 
 	group = g_ptr_array_index(keybinding_groups, GEANY_KEY_GROUP_SEARCH);
 	GEANY_ADD_POPUP_ACCEL(GEANY_KEYS_SEARCH_FINDUSAGE, find_usage1);
+	GEANY_ADD_POPUP_ACCEL(GEANY_KEYS_SEARCH_FINDDOCUMENTUSAGE, find_document_usage1);
 
 	group = g_ptr_array_index(keybinding_groups, GEANY_KEY_GROUP_GOTO);
 	GEANY_ADD_POPUP_ACCEL(GEANY_KEYS_GOTO_TAGDEFINITION, goto_tag_definition1);
