@@ -3,6 +3,8 @@
  * src/editor.c:
    Respect 'Smart' home key for Shift+Alt+Home (patch by Dimitar
    Zhekov, thanks).
+ * src/interface.c, src/keybindings.c, src/ui_utils.c, geany.glade:
+   Restore top-level editor popup item 'Find Document Usage'.
 
 
 2010-11-06  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>
